--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "jest": "^27.5.1",
     "react": "^18.3.1",
