--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "nyc react-scripts test",
     "eject": "react-scripts eject",
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "test:coverage": "react-scripts test --coverage"
+    "test:coverage": "react-scripts test --coverage",
+    "coverage": "react-scripts test --coverage --watchAll"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,10 @@
     "nyc": "^17.1.0",
     "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.14"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+        "!src/index.js"
+    ]
   }
 }
